# saratonin-integrations

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md
.claude/: settings.json
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/crates/integration-core/: CLAUDE.md  Cargo.toml
rust/crates/integration-core/src/: cache.rs  error.rs  http.rs  lib.rs  retry.rs
rust/crates/integration-pinball-league/: Cargo.toml
rust/crates/integration-pinball-league/migrations/: 001_matchplay_users.sql
rust/crates/integration-pinball-league/src/: client.rs  error.rs  lib.rs  models.rs  service.rs
rust/crates/integration-pinball-league/src/matchplay_users/: mod.rs  models.rs  repository.rs
rust/crates/integration-pinball-machine/: Cargo.toml
rust/crates/integration-pinball-machine/migrations/: 002_machine_favorites.sql
rust/crates/integration-pinball-machine/src/: error.rs  lib.rs  models.rs  opdb.rs  pinball_map.rs  pintips.rs  service.rs
rust/crates/integration-pinball-machine/src/favorites/: mod.rs  models.rs  repository.rs
rust/crates/integration-pos/: Cargo.toml
rust/crates/integration-pos/src/: error.rs  lib.rs  mock.rs  models.rs  toast.rs
rust/crates/integration-push/: Cargo.toml
rust/crates/integration-push/src/: apns.rs  error.rs  fcm.rs  lib.rs  mock.rs
rust/crates/integration-sms/: Cargo.toml
rust/crates/integration-sms/src/: error.rs  lib.rs  mock.rs  twilio.rs
