[workspace]
resolver = "2"
members = [
    "crates/integration-core",
    "crates/integration-sms",
    "crates/integration-pos",
    "crates/integration-push",
    "crates/integration-pinball-machine",
    "crates/integration-pinball-league",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/saratonin/saratonin-integrations"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = { version = "0.1" }
dashmap = { version = "6.1" }
parking_lot = { version = "0.12" }

# Testing
tokio-test = { version = "0.4" }
wiremock = { version = "0.6" }

# Internal crates
integration-core = { path = "crates/integration-core" }
integration-sms = { path = "crates/integration-sms" }
integration-pos = { path = "crates/integration-pos" }
integration-push = { path = "crates/integration-push" }
integration-pinball-machine = { path = "crates/integration-pinball-machine" }
integration-pinball-league = { path = "crates/integration-pinball-league" }
